--- a/projects/index.html
+++ b/projects/index.html
@@ -22,6 +22,7 @@
             <a href="/projects/minesweeper">Windows 98 Minesweeper recreation</a>
             <a href="/projects/moss">Fake terminal</a>
             <a href="/projects/moss1.0">Fake terminal version 1.0</a>
+            <a href="/projects/dodge">Dodge</a>
             <span class="cpp_comment">// TODO: make this page look better</span>
         </div>
     </body>
