--- a/projects/dodge/index.html
+++ b/projects/dodge/index.html
@@ -4,9 +4,9 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="/index.css">
-	<script src="/utility.js"></script>
-	<script src="/bullets.js"></script>
-	<script type="module" src="./index.js"></script>
+	<script src="utility.js"></script>
+	<script src="bullets.js"></script>
+	<script src="index.js"></script>
 	<title>Dodge</title>
 </head>
 <body>
