--- a/projects/deltasymbols/index.html
+++ b/projects/deltasymbols/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<div class="grid">
-		<label for="sentence">Message</label><input type="text" id="sentence" value="Type message here . I suggest make sentence simple if you want people figure it out easy , also seperate punctuation with space . kind of like this example .">
+		<label for="sentence">Message</label><input type="text" id="sentence" value="Type message here .">
 		<label for="line-width">Line Width</label><input type="number" id="line-width-setting" value="4" onchange="redraw();">
 		<label for="color-setting">Color</label><input type="color" id="color-setting" value="#FFFFFF" onchange="redraw();">
 		<label for="rings-setting">Rings</label><input type="number" id="rings-setting" value="4" onchange="redraw();">
