--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index.css">
-	<title>RandomNamesAreKewl.github.io | Homepage</title>
+	<title>RandomNamesAreKewl.github.io | About</title>
 </head>
 <body>
 	<div id="content-area">
@@ -14,9 +14,10 @@
 			<li><a href="/projects.html">Projects</a></li>
 			<li><a href="/music.html">Music</a></li>
 		</ul>
-		<h1>Welcome!</h1>
+		<h1>About me</h1>
 		<p>
-			Welcome to randomnamesarekewl.github.io, a place for me to host random web projects I create, along with other random trinkets.
+			I enjoy programming as a hobby, and I love Half-Life, Portal (1 and 2), Counter-Strike 2, UNDERTALE, DELTARUNE, and the classic Sonic the Hedgehog games.
+			I also enjoy 3D Modeling, 2D art, and making music (Though I'm not great at making music yet).
 		</p>
 		<img src="images/construction.gif" alt="Under Construction">
 	</div>
