--- a/blank.html
+++ b/blank.html
@@ -4,7 +4,7 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="index.css">
-	<title>RandomNamesAreKewl.github.io | Homepage</title>
+	<title>RandomNamesAreKewl.github.io | Blank</title>
 </head>
 <body>
 	<div id="content-area">
@@ -14,11 +14,6 @@
 			<li><a href="/projects.html">Projects</a></li>
 			<li><a href="/music.html">Music</a></li>
 		</ul>
-		<h1>Welcome!</h1>
-		<p>
-			Welcome to randomnamesarekewl.github.io, a place for me to host random web projects I create, along with other random trinkets.
-		</p>
-		<img src="images/construction.gif" alt="Under Construction">
 	</div>
 </body>
 </html>
