Updated navbar and misc minor adjustments

--- a/about.html
+++ b/about.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 	<div id="content-area">
-		<ul id="navbar">
-			<li><a href="/index.html">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-			<li><a href="/projects.html">Projects</a></li>
-			<li><a href="/music.html">Music</a></li>
-		</ul>
+		<a href="/index.html">Home</a>
+		<a href="/about.html">About</a>
+		<a href="/projects.html">Projects</a>
+		<a href="/music.html">Music</a>
 		<h1>About me</h1>
 		<p>
 			I enjoy programming as a hobby, and I love Half-Life, Portal (1 and 2), Counter-Strike 2, UNDERTALE, DELTARUNE, and the classic Sonic the Hedgehog games.
