--- a/blank.html
+++ b/blank.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 	<div id="content-area">
-		<ul id="navbar">
-			<li><a href="/index.html">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-			<li><a href="/projects.html">Projects</a></li>
-			<li><a href="/music.html">Music</a></li>
-		</ul>
+		<a href="/index.html">Home</a>
+		<a href="/about.html">About</a>
+		<a href="/projects.html">Projects</a>
+		<a href="/music.html">Music</a>
 	</div>
 </body>
 </html>
