--- a/projects.html
+++ b/projects.html
@@ -8,18 +8,16 @@
 </head>
 <body>
 	<div id="content-area">
-		<ul id="navbar">
-			<li><a href="/index.html">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-			<li><a href="/projects.html">Projects</a></li>
-			<li><a href="/music.html">Music</a></li>
-		</ul>
+		<a href="/index.html">Home</a>
+		<a href="/about.html">About</a>
+		<a href="/projects.html">Projects</a>
+		<a href="/music.html">Music</a>
 		<h1>My Projects</h1>
 		<p>
 			Behold, a collection of my projects. Although I won't gaurentee that all my stuff is here.
 			Feel free to peruse my catalog, or look for a certain project. All completely free for you
 			to enjoy! (NOTICE: I do not take into account the cost for a web capable device,
-			internet / mobile data fees, and any other costs, like sanity, for visiting my website)
+			internet / mobile data fees, and or any other costs, like sanity, for visiting my website)
 		</p>
 		<h2>Web Projects</h2>
 		<table>
@@ -31,6 +29,18 @@
 			</thead>
 			<tbody>
 				<tr>
+					<td><a href="/projects/deltasymbols/index.html">Delta Symbols Generator</a></td>
+					<td>Generate alien looking symbols, fairly customizable.</td>
+				</tr>
+				<tr>
+					<td><a href="/projects/dodge/index.html">Dodge</a></td>
+					<td>Be a circle who dodges circles, but not green ones. Made for a coding class, in case you were wondering. (But you probably weren't)</td>
+				</tr>
+				<tr>
+					<td><a href="/projects/fish/index.html">Fish</a></td>
+					<td>Are you a fish? Take this quiz today on your Windows 98 machine! (NOTICE: We do not support real Windows 98 hardware and simply recreate the look and feel for you quizing pleasure)</td>
+				</tr>
+				<tr>
 					<td><a href="/projects/minesweeper/index.html">Minesweeper</a></td>
 					<td>A simple game of minesweeper! Designed to look like the Windows 9X app. Currently not very accurate.</td>
 				</tr>
@@ -41,22 +51,6 @@
 				<tr>
 					<td><a href="/projects/moss/index.html">MOSS 2.0</a></td>
 					<td>The older cousin of MOSS. I think the first version is better. Just here for completeness sake.</td>
-				</tr>
-				<tr>
-					<td><a href="/projects/moss/index.html">Raytracer</a></td>
-					<td>A raytracer completely written in HTML5. Doesn't perform the best. (Who could've guessed?)</td>
-				</tr>
-				<tr>
-					<td><a href="/projects/dodge/index.html">Dodge</a></td>
-					<td>Be a circle who dodges circles, but not green ones. Made for a coding class, in case you were wondering. (But you probably weren't)</td>
-				</tr>
-				<tr>
-					<td><a href="/projects/deltasymbols/index.html">Delta Symbols Generator</a></td>
-					<td>Generate alien looking symbols, fairly customizable.</td>
-				</tr>
-				<tr>
-					<td><a href="/projects/fish/index.html">Fish</a></td>
-					<td>Are you a fish? Take this quiz today on your Windows 98 machine! (NOTICE: We do not support real Windows 98 hardware and simply recreate the look and feel for you quizing pleasure)</td>
 				</tr>
 				<tr>
 					<td><a href="/projects/paintr/index.html">Pain-tr</a></td>
