--- a/index.html
+++ b/index.html
@@ -8,12 +8,10 @@
 </head>
 <body>
 	<div id="content-area">
-		<ul id="navbar">
-			<li><a href="/index.html">Home</a></li>
-			<li><a href="/about.html">About</a></li>
-			<li><a href="/projects.html">Projects</a></li>
-			<li><a href="/music.html">Music</a></li>
-		</ul>
+		<a href="/index.html">Home</a>
+		<a href="/about.html">About</a>
+		<a href="/projects.html">Projects</a>
+		<a href="/music.html">Music</a>
 		<h1>Welcome!</h1>
 		<p>
 			Welcome to randomnamesarekewl.github.io, a place for me to host random web projects I create, along with other random trinkets.
